Fix broken style

--- a/warp/static/sass/common/_variables.scss
+++ b/warp/static/sass/common/_variables.scss
@@ -16,6 +16,7 @@ $desktop-wrapper-max-width: 640;
 $desktop-detail-left-width: 600px;
 
 $desktop-header-height: 64px;
+$desktop-header-margin-bottom: 32px;
 
 $key-green-color: #2FC9A8;
 $key-orange-color: #FF7300;
